# case-backend-kabum

./: .editorconfig  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
src/: config.py  containers.py  logger.py  main.py
src/shipping/routes/calculate_shipping/: controllers.py  schemas.py
src/shipping/routes/health/: controllers.py
src/shipping/routes/shipping_options/: controllers.py  schemas.py
src/shipping/services/: shipping_service.py
tests/: conftest.py
tests/test_e2e/: test_calculate_shipping.py  test_health.py  test_shipping_options.py
