[tool.poetry]
name = "Shipping Calculation API"
version = "0.1.0-alpha.2"
description = "Technical test for Kabum of a shipping calculation API"
authors = ["Carlos Mondo <csvmondo@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
aiologger = "^0.6.1"
dependency-injector = "^4.40.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest-mock = "^3.8.2"
pytest-lazy-fixture = "^0.6.3"
freezegun = "^1.2.2"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
